--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "webpack-raphael": "^2.1.4"
   },
   "scripts": {
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "test": "mocha test -u bdd -R spec",
     "build": "webpack -p --config ./webpack.production.config.js"
   }
